specs/blueprints/errors/validation/expected_field_got_section.eno
# Expecting a field but getting an empty section

-- input
# section
-- input

-- javascript
eno.parse(input).field('section');
-- javascript

-- php
Eno\Parser::parse($input)->field('section');
-- php

-- python
enolib.parse(input).field('section')
-- python

-- ruby
Eno.parse(input).field('section')
-- ruby

## ValidationError

-- text
Instead of the expected field 'section' a section with this key was found.
-- text

-- snippet
   Line | Content
 >    1 | # section
-- snippet

selection: [0,0] => [0,9]


# Expecting a field but getting a section with a field and a list

-- input
# section

field: value

list:
- item
- item
-- input

-- javascript
eno.parse(input).field('section');
-- javascript

-- php
Eno\Parser::parse($input)->field('section');
-- php

-- python
enolib.parse(input).field('section')
-- python

-- ruby
Eno.parse(input).field('section')
-- ruby

## ValidationError

-- text
Instead of the expected field 'section' a section with this key was found.
-- text

-- snippet
   Line | Content
 >    1 | # section
      2 | 
      3 | field: value
   ...
-- snippet

selection: [0,0] => [6,6]

# Expecting a field but getting a section with subsections

-- input
# section

## subsection

field: value

## subsection

list:
- item
- item
-- input

-- javascript
eno.parse(input).field('section');
-- javascript

-- php
Eno\Parser::parse($input)->field('section');
-- php

-- python
enolib.parse(input).field('section')
-- python

-- ruby
Eno.parse(input).field('section')
-- ruby

## ValidationError

-- text
Instead of the expected field 'section' a section with this key was found.
-- text

-- snippet
   Line | Content
 >    1 | # section
      2 | 
      3 | ## subsection
   ...
-- snippet

selection: [0,0] => [10,6]
